--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -377,7 +377,7 @@ footer {
         line-height: 0.9em;
     }
 
-    h2 {
+    h2,p {
         color: lighten($base-color, 25%);
         font-weight: 500;
         font-size: 2.25em;
