--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -835,7 +835,7 @@ footer {
 
 #contact {
     padding: 50px 15px;
-    background: $base-color;
+    background: rgba(100, 100, 100, 0.2);
     text-align: center;
 
     h2 {
